--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: A-Romance-of-Youth-Volume-2_3959
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'French fiction -- Translations into English'
 - !lcsh 'Paris (France) -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: A Romance of Youth — Volume 2
 url: http://www.gutenberg.org/ebooks/3959
